# ebay_searcher

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  config.py  db.py  import_transactions.py  lambda_alert_handler.py  lambda_handler.py  lambda_weekly_handler.py  main.py  models.py  notifier.py  price_guide.py  price_guide_fantasy.py  pricing.py  pyproject.toml  review.sh
.github/workflows/: deploy.yml  tests.yml
deploy/: Dockerfile.lambda  deploy.sh
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ebay_searcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hooks/: install.sh  pre-commit
scripts/: genre_tracker.py  market_scout.py  price_history.py  refresh_price_guide.py  weekly_digest.py
sources/: __init__.py  buyback.py  depop.py  ebay.py  ebay_api.py  ebay_market.py  ebay_sold.py  etsy.py  reddit.py  vinted.py
tests/: conftest.py  test_alert_handler.py  test_buyback.py  test_config.py  test_db.py  test_ebay.py  test_ebay_market.py  test_ebay_sold.py  test_etsy.py  test_feedback.py  test_genre_tracker.py  test_import_transactions.py  test_lambda_handler.py  test_lambda_weekly_handler.py  test_market_scout.py  test_notifier.py  test_price_guide.py  test_pricing.py  test_reddit.py  test_vinted.py
