[project]
name = "ebay-searcher"
version = "0.1.0"
description = "Daily eBay + Vinted bargain finder for Black Library books"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # source lives in LAMBDA_TASK_ROOT; only deps need installing

[dependency-groups]
dev = [
    "boto3>=1.34",
    "openpyxl>=3.1.5",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
lambda = [
    "boto3>=1.34",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
